@@ -1,3 +1,8 @@
+Tue Nov 04 00:46:40 2008  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: add checkbutton to allow for no legends on the
+	  lineplot, useful if I want to just draw myself on the graphs
+
 Tue Nov 04 00:19:54 2008  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: fix warning
